--- a/cefau3.vcxproj
+++ b/cefau3.vcxproj
@@ -20,14 +20,30 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\api\browser.c" />
+    <ClCompile Include="src\api\browser_process_handler.c" />
+    <ClCompile Include="src\api\command_line.c" />
+    <ClCompile Include="src\api\context_menu_handler.c" />
+    <ClCompile Include="src\api\dialog_handler.c" />
     <ClCompile Include="src\api\display_handler.c" />
+    <ClCompile Include="src\api\download_hadler.c" />
+    <ClCompile Include="src\api\download_item.c" />
+    <ClCompile Include="src\api\drag_data.c" />
+    <ClCompile Include="src\api\drag_handler.c" />
+    <ClCompile Include="src\api\find_handler.c" />
+    <ClCompile Include="src\api\focus_handler.c" />
     <ClCompile Include="src\api\frame.c" />
+    <ClCompile Include="src\api\geolocation.c" />
+    <ClCompile Include="src\api\geolocation_handler.c" />
     <ClCompile Include="src\api\keyboard_handler.c" />
     <ClCompile Include="src\api\life_span_handler.c" />
+    <ClCompile Include="src\api\load_handler.c" />
+    <ClCompile Include="src\api\parser.c" />
     <ClCompile Include="src\api\render_process_handler.c" />
+    <ClCompile Include="src\api\task.c" />
     <ClCompile Include="src\api\types.c" />
     <ClCompile Include="src\api\types_win.c" />
     <ClCompile Include="src\api\v8.c" />
+    <ClCompile Include="src\api\values.c" />
     <ClCompile Include="src\base\app.c" />
     <ClCompile Include="src\base\base.c" />
     <ClCompile Include="src\base\client.c" />
